// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker DatePicker baseVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <h3>
      valueType:
    </h3>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="YYYY-MM-DD"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          YYYY-MM-DD
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="time-stamp"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          time-stamp
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择日期"
            readonly="readonly"
            type="text"
            unselectable="on"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="可清除、可输入的日期选择器"
            type="text"
            unselectable="off"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker customIconVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
        >
          <span
            class="t-input__prefix t-input__prefix-icon"
          >
            <svg
              class="t-icon t-icon-browse"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10.88 8a2.88 2.88 0 11-5.76 0 2.88 2.88 0 015.76 0zm-1 0a1.88 1.88 0 10-3.76 0 1.88 1.88 0 003.76 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M1.12 8.23A7.72 7.72 0 008 12.5c2.9 0 5.54-1.63 6.88-4.27L15 8l-.12-.23A7.73 7.73 0 008 3.5a7.74 7.74 0 00-6.88 4.27L1 8l.12.23zM8 11.5A6.73 6.73 0 012.11 8 6.73 6.73 0 0113.9 8 6.74 6.74 0 018 11.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择日期"
            readonly="readonly"
            type="text"
            unselectable="on"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker datePresetsAltVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-range-picker"
    >
      <div
        class="t-range-input-popup"
      >
        <div
          class="t-range-input"
        >
          <div
            class="t-range-input__inner"
          >
            <div
              class="t-input__wrap t-range-input__inner-left"
            >
              <div
                class="t-input t-size-m t-is-default t-is-readonly"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择日期"
                  readonly="readonly"
                  type="text"
                  unselectable="on"
                />
              </div>
            </div>
            <div
              class="t-range-input__inner-separator"
            >
              -
            </div>
            <div
              class="t-input__wrap t-range-input__inner-right"
            >
              <div
                class="t-input t-size-m t-is-default t-is-readonly"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择日期"
                  readonly="readonly"
                  type="text"
                  unselectable="on"
                />
              </div>
            </div>
            <span
              class="t-range-input__suffix t-range-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-range-picker"
    >
      <div
        class="t-range-input-popup"
      >
        <div
          class="t-range-input"
        >
          <div
            class="t-range-input__inner"
          >
            <div
              class="t-input__wrap t-range-input__inner-left"
            >
              <div
                class="t-input t-size-m t-is-default t-is-readonly"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择日期"
                  readonly="readonly"
                  type="text"
                  unselectable="on"
                />
              </div>
            </div>
            <div
              class="t-range-input__inner-separator"
            >
              -
            </div>
            <div
              class="t-input__wrap t-range-input__inner-right"
            >
              <div
                class="t-input t-size-m t-is-default t-is-readonly"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择日期"
                  readonly="readonly"
                  type="text"
                  unselectable="on"
                />
              </div>
            </div>
            <span
              class="t-range-input__suffix t-range-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker dateRangeVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-range-picker"
    >
      <div
        class="t-range-input-popup"
      >
        <div
          class="t-range-input"
        >
          <div
            class="t-range-input__inner"
          >
            <div
              class="t-input__wrap t-range-input__inner-left"
            >
              <div
                class="t-input t-size-m t-is-default"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择日期"
                  type="text"
                  unselectable="off"
                />
              </div>
            </div>
            <div
              class="t-range-input__inner-separator"
            >
              -
            </div>
            <div
              class="t-input__wrap t-range-input__inner-right"
            >
              <div
                class="t-input t-size-m t-is-default"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择日期"
                  type="text"
                  unselectable="off"
                />
              </div>
            </div>
            <span
              class="t-range-input__suffix t-range-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-range-picker"
    >
      <div
        class="t-range-input-popup"
      >
        <div
          class="t-range-input"
        >
          <div
            class="t-range-input__inner"
          >
            <div
              class="t-input__wrap t-range-input__inner-left"
            >
              <div
                class="t-input t-size-m t-is-default"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择日期"
                  type="text"
                  unselectable="off"
                />
              </div>
            </div>
            <div
              class="t-range-input__inner-separator"
            >
              -
            </div>
            <div
              class="t-input__wrap t-range-input__inner-right"
            >
              <div
                class="t-input t-size-m t-is-default"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择日期"
                  type="text"
                  unselectable="off"
                />
              </div>
            </div>
            <span
              class="t-range-input__suffix t-range-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker dateTimeVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
            unselectable="off"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
            unselectable="off"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker disableDateVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="禁用昨天、前天"
            readonly="readonly"
            type="text"
            unselectable="on"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="明后三天禁用"
            readonly="readonly"
            type="text"
            unselectable="on"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="禁用所有周六"
            readonly="readonly"
            type="text"
            unselectable="on"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="禁用最近 3 天外的日期"
            readonly="readonly"
            type="text"
            unselectable="on"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="禁用日期精确到时间"
            readonly="readonly"
            type="text"
            unselectable="on"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-range-picker"
    >
      <div
        class="t-range-input-popup"
      >
        <div
          class="t-range-input"
        >
          <div
            class="t-range-input__inner"
          >
            <div
              class="t-input__wrap t-range-input__inner-left"
            >
              <div
                class="t-input t-size-m t-is-default t-is-readonly"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="禁用最近 5 天外的日期"
                  readonly="readonly"
                  type="text"
                  unselectable="on"
                />
              </div>
            </div>
            <div
              class="t-range-input__inner-separator"
            >
              -
            </div>
            <div
              class="t-input__wrap t-range-input__inner-right"
            >
              <div
                class="t-input t-size-m t-is-default t-is-readonly"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="禁用最近 5 天外的日期"
                  readonly="readonly"
                  type="text"
                  unselectable="on"
                />
              </div>
            </div>
            <span
              class="t-range-input__suffix t-range-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker firstDayOfWeekVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="1"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          1
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="2"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          2
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          3
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="4"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          4
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="5"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          5
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="6"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          6
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="7"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          7
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择日期"
            readonly="readonly"
            type="text"
            unselectable="on"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker monthVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择月份"
            type="text"
            unselectable="off"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-range-picker"
    >
      <div
        class="t-range-input-popup"
      >
        <div
          class="t-range-input"
        >
          <div
            class="t-range-input__inner"
          >
            <div
              class="t-input__wrap t-range-input__inner-left"
            >
              <div
                class="t-input t-size-m t-is-default"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择月份"
                  type="text"
                  unselectable="off"
                />
              </div>
            </div>
            <div
              class="t-range-input__inner-separator"
            >
              -
            </div>
            <div
              class="t-input__wrap t-range-input__inner-right"
            >
              <div
                class="t-input t-size-m t-is-default"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择月份"
                  type="text"
                  unselectable="off"
                />
              </div>
            </div>
            <span
              class="t-range-input__suffix t-range-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker yearVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-picker"
    >
      <div
        class="t-input__wrap t-select-input--empty"
      >
        <div
          class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择年份"
            type="text"
            unselectable="off"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-date-range-picker"
    >
      <div
        class="t-range-input-popup"
      >
        <div
          class="t-range-input"
        >
          <div
            class="t-range-input__inner"
          >
            <div
              class="t-input__wrap t-range-input__inner-left"
            >
              <div
                class="t-input t-size-m t-is-default"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择年份"
                  type="text"
                  unselectable="off"
                />
              </div>
            </div>
            <div
              class="t-range-input__inner-separator"
            >
              -
            </div>
            <div
              class="t-input__wrap t-range-input__inner-right"
            >
              <div
                class="t-input t-size-m t-is-default"
              >
                <input
                  autocomplete=""
                  class="t-input__inner"
                  placeholder="请选择年份"
                  type="text"
                  unselectable="off"
                />
              </div>
            </div>
            <span
              class="t-range-input__suffix t-range-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
